--- a/shashi_23112036.md
+++ b/shashi_23112036.md
@@ -1,9 +1,10 @@
 # Sql Queries
 
-### 1.Show all trains information travelling between Goa Mumbai and Ajmer-Lonavala where at least half the coaches are due for maintenance on or before 30 November this year.
+### 1.Show schedule of all trips including main driver information for 10th October this year.
 ```sql
 select t.*,r.*,c.*,month(c.last_maintained) as month from active_coaches ac,coaches c,trains t,routes r where ac.coach_no=c.coach_no and ac.train_no=t.train_no and r.route_no=t.route_no and r.route_name IN("GOA-MUMBAI","AJMER-LONAVALA") having month<6;
 ```
 ## OUTPUT
+<img src="./23112036_shashi_ranjan/b1.png">
 
 
