--- a/shashi_23112036.md
+++ b/shashi_23112036.md
@@ -5,6 +5,10 @@
 select t.*,r.*,c.*,month(c.last_maintained) as month from active_coaches ac,coaches c,trains t,routes r where ac.coach_no=c.coach_no and ac.train_no=t.train_no and r.route_no=t.route_no and r.route_name IN("GOA-MUMBAI","AJMER-LONAVALA") having month<6;
 ```
 ## OUTPUT
-<img src="./23112036_shashi_ranjan/b1.png">
 
-
+<img
+  src="./23112036_shashi_ranjan/b1.png"
+  alt="Alt text"
+  title="Optional title"
+  style="display: inline-block; margin: 0 auto;width: 100%;height:100%;padding:10px">
+<hr>
