--- a/shashi_23112036.md
+++ b/shashi_23112036.md
@@ -2,7 +2,7 @@
 
 ### 1.Show schedule of all trips including main driver information for 10th October this year.
 ```sql
-select t.*,r.*,c.*,month(c.last_maintained) as month from active_coaches ac,coaches c,trains t,routes r where ac.coach_no=c.coach_no and ac.train_no=t.train_no and r.route_no=t.route_no and r.route_name IN("GOA-MUMBAI","AJMER-LONAVALA") having month<6;
+select ss.*,s.* from staff_schedule ss,staffs s where ss.date='2023-10-10' and ss.staff_no=s.staff_no;
 ```
 ## OUTPUT
 
